# feature/chat/src/jvmMain/kotlin/dev/alxminyaev/feature/chat/api/models/CreateMessageWithAttachmentRequest.kt
@@ -1,0 +1,24 @@
+/**
+* Chat service
+* Chat service
+*
+* The version of the OpenAPI document: 1.0.0
+* Contact: alxminyaev@gmail.com
+*
+* NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+* https://openapi-generator.tech
+* Do not edit the class manually.
+*/
+package dev.alxminyaev.feature.chat.api.models
+
+
+/**
+ * 
+ * @param text 
+ * @param files 
+ */
+data class CreateMessageWithAttachmentRequest (
+    val text: kotlin.String,
+    val files: kotlin.Array<java.io.File>? = null
+) 
+
