# feature/chat/src/jvmMain/kotlin/dev/alxminyaev/feature/chat/api/models/Profile.kt
@@ -1,0 +1,26 @@
+/**
+* Chat service
+* Chat service
+*
+* The version of the OpenAPI document: 1.0.0
+* Contact: alxminyaev@gmail.com
+*
+* NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+* https://openapi-generator.tech
+* Do not edit the class manually.
+*/
+package dev.alxminyaev.feature.chat.api.models
+
+
+/**
+ * 
+ * @param firstName 
+ * @param lastName 
+ * @param middleName 
+ */
+data class Profile (
+    val firstName: kotlin.String,
+    val lastName: kotlin.String,
+    val middleName: kotlin.String? = null
+) 
+
