# feature/chat/src/jvmMain/kotlin/dev/alxminyaev/feature/chat/api/models/UserResponse.kt
@@ -1,0 +1,25 @@
+/**
+* Chat service
+* Chat service
+*
+* The version of the OpenAPI document: 1.0.0
+* Contact: alxminyaev@gmail.com
+*
+* NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+* https://openapi-generator.tech
+* Do not edit the class manually.
+*/
+package dev.alxminyaev.feature.chat.api.models
+
+import dev.alxminyaev.feature.chat.api.models.Profile
+
+/**
+ * 
+ * @param id 
+ * @param profile 
+ */
+data class UserResponse (
+    val id: kotlin.Long,
+    val profile: Profile
+) 
+
