# feature/chat/swagger.yaml
@@ -19,6 +19,8 @@ tags:
     description: "Chat"
   - name: "Message"
     description: "Message"
+  - name: "File"
+    description: "Файл"
 
 paths:
   /api/v1/chat:
@@ -84,6 +86,40 @@ paths:
                 $ref: "#/components/schemas/EntityLongCreatedResponse"
         "401":
           description: "Unauthorized"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+  /api/v1/chat/{chatId}:
+    get:
+      tags:
+        - "Chat"
+      summary: "Get chat by id"
+      description: ""
+      operationId: "getChatById"
+      parameters:
+        - in: path
+          name: chatId
+          description: "ID of chat"
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: "OK"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ChatDetailResponse'
+        "401":
+          description: "Unauthorized"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "403":
+          description: "Forbidden"
           content:
             application/json:
               schema:
@@ -158,6 +194,9 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/CreateMessageRequest'
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/CreateMessageWithAttachmentRequest'
       responses:
         '200':
           description: "OK"
@@ -183,6 +222,50 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
+
+#  /api/v1/file/upload:
+#    post:
+#      tags:
+#        - "File"
+#      summary: "Upload files"
+#      description: ""
+#      operationId: "uploadFiles"
+#      requestBody:
+#        content:
+#          multipart/form-data:
+#            schema:
+#              type: object
+#              properties:
+#                filename:
+#                  type: array
+#                  items:
+#                    type: string
+#                    format: binary
+#      responses:
+#        '200':
+#          description: "OK"
+#          content:
+#            application/json:
+#              schema:
+#                $ref: "#/components/schemas/FileListResponse"
+#        "401":
+#          description: "Unauthorized"
+#          content:
+#            application/json:
+#              schema:
+#                $ref: "#/components/schemas/ErrorResponse"
+#        "403":
+#          description: "Forbidden"
+#          content:
+#            application/json:
+#              schema:
+#                $ref: "#/components/schemas/ErrorResponse"
+#        "422":
+#          description: "Unprocessable Entity"
+#          content:
+#            application/json:
+#              schema:
+#                $ref: "#/components/schemas/ErrorResponse"
 
 
 components:
@@ -236,6 +319,53 @@ components:
         lastMessage:
           $ref: '#/components/schemas/MessageResponse'
 
+    ChatDetailResponse:
+      type: object
+      required:
+        - id
+        - name
+        - users
+        - userInfo
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
+        users:
+          type: array
+          items:
+            $ref: '#/components/schemas/UserResponse'
+        userInfo:
+          $ref: "#/components/schemas/UserInfo"
+        lastMessage:
+          $ref: '#/components/schemas/MessageResponse'
+
+    UserResponse:
+      type: object
+      required:
+        - id
+        - profile
+      properties:
+        id:
+          type: integer
+          format: int64
+        profile:
+          $ref: '#/components/schemas/Profile'
+
+    Profile:
+      type: object
+      required:
+        - firstName
+        - lastName
+      properties:
+        firstName:
+          type: "string"
+        lastName:
+          type: "string"
+        middleName:
+          type: "string"
+
     UserInfo:
       type: object
       required:
@@ -268,6 +398,10 @@ components:
           format: int64
         text:
           type: string
+        files:
+          type: array
+          items:
+            $ref: '#/components/schemas/FileResponse'
         dateTime:
           type: "string"
           format: "date-time"
@@ -280,6 +414,9 @@ components:
           type: integer
           format: int64
           description: "id of receiver"
+
+
+
     CreateMessageRequest:
       type: object
       required:
@@ -287,6 +424,19 @@ components:
       properties:
         text:
           type: string
+
+    CreateMessageWithAttachmentRequest:
+      type: object
+      required:
+        - text
+      properties:
+        text:
+          type: string
+        files:
+          type: array
+          items:
+            type: string
+            format: binary
 
 
     ErrorResponse:
@@ -298,6 +448,29 @@ components:
           type: "string"
         message:
           type: "string"
+
+    FileListResponse:
+      type: object
+      required:
+        - files
+      properties:
+        files:
+          type: array
+          items:
+            $ref: '#/components/schemas/FileResponse'
+
+    FileResponse:
+      type: object
+      required:
+        - id
+        - path
+      properties:
+        id:
+          type: integer
+          format: int64
+        path:
+          type: string
+
     EntityLongCreatedResponse:
       type: object
       required:
